# alpha-zero-general-lib

./: .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml
example/othello/: NNet.py  OthelloGame.py  OthelloLogic.py  OthelloNNet.py  README.md  game.py  keras.py  league.py  logic.py  main.py  nnet.py  nnet_wrapper.py  pit.py  pytorch.py
src/alpha_zero_general/: Arena.py  Coach.py  MCTS.py  __init__.py  arena.py  coach.py  game.py  league.py  mcts.py  neuralnet.py  player.py  utils.py
tests/: conftest.py  test_arena.py  test_coach.py  test_league.py  test_package.py  test_player.py  test_utils.py
