[tool.poetry]
name = "alpha-zero-general-lib"
version = "0.1.0"
description = "A simplified, highly flexible, commented and (hopefully) easy to understand implementation of self-play based reinforcement learning based on the AlphaGo Zero paper"
authors = ["Surag Nair", "Shantanu Thakoor", "Megha Jhunjhunwala", "Andreas Peldszus"]
license = "MIT"
packages = [
    { include = "alpha_zero_general", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.5.0"
pre-commit = "^2.3.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
